# pycapnp

./: .buildinfo  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  DEPLOY.md  LICENSE  LICENSE.md  MANIFEST.in  Pipfile  README.md  capnp.html  capnp.pyx  capnp.tmpl.pxd  capnp.tmpl.pyx  capnp_cpp.pxd  conan-build.profile  conan-host.profile  conanfile.py  fixMaybe.h  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  schema.capnp.c++  schema.capnp.cpp.pyx  schema.capnp.h  schema.cpp  schema.pxd  schema.pyx  schema_cpp.pxd  search.html  searchindex.js  setup.cfg  setup.py  (+2 more)
.doctrees/: capnp.doctree  environment.pickle  index.doctree  install.doctree  quickstart.doctree
.github/workflows/: codeql.yml  docs.yml  manylinux.yml  manylinux2010.yml  manylinux2014.yml  packagingtest.yml  pythonpackage.yml  wheels.yml
_custom_build/: backend.py
_modules/: capnp.html  index.html
_modules/importlib/: _bootstrap.html
_sources/: capnp.txt  index.rst.txt  index.txt  install.rst.txt  install.txt  quickstart.rst.txt  quickstart.txt
_static/: documentation_options.js
benchmark/: addressbook.capnp  addressbook.capnp.bytes.py  addressbook.capnp.orphan.py  addressbook.capnp.py  addressbook.proto  addressbook.proto.py  addressbook_pb2.py  carsales.proto  carsales_pb2.py  carsales_proto.py  carsales_pycapnp.py  catrank.proto  catrank_pb2.py  catrank_proto.py  catrank_pycapnp.py  common.py  common_fast.pyx  eval.proto  eval_pb2.py  eval_proto.py  eval_pycapnp.py  run_all.py  runner.py
bootstrap/: README.md  capnp.tmpl.pxd  capnp.tmpl.pyx  setup.py
buildutils/: __init__.py  build.py  bundle.py  config.py  constants.py  detect.py  misc.py  msg.py  patch.py  setup_travis.sh  vers.cpp
capnp/: __init__.py  __init__.pyi  _gen.py  _internal.pyi  async.h  async.pyx  asyncHelper.h  asyncHelper_cpp.pxd  async_cpp.pxd  capabilityHelper.h  capnp.cpp  capnp.pyx  capnp_cpp.pxd  fixMaybe.h  rpcHelper.h  schema.cpp  schema.pyx  schema_cpp.pxd  types.pyi  version.py  version.pyi
capnp/contrib/: genpyi.py
capnp/helpers/: asyncHelper.h  asyncIoHelper.h  asyncProvider.cpp  asyncProvider.h  capabilityHelper.cpp  capabilityHelper.h  checkCompiler.h  deserialize.h  fixMaybe.h  helpers.pxd  non_circular.pxd  rpcHelper.h  serialize.h
capnp/includes/: PyCustomMessageBuilder.cpp  PyCustomMessageBuilder.h  capnp_cpp.pxd  schema_cpp.pxd  types.pxd
capnp/lib/: __init__.pyi  capnp.pxd  capnp.pyi  capnp.pyx  pickle_helper.py
capnp/templates/: module.pyx  setup.py  setup.py.tmpl
docs/: Makefile  capnp.rst  conf.py  index.rst  install.rst  quickstart.rst
examples/: addressbook.capnp  addressbook.py  async_calculator_client.py  async_calculator_server.py  async_client.py  async_reconnecting_ssl_client.py  async_server.py  async_socket_message_client.py  async_socket_message_server.py  async_ssl_calculator_client.py  async_ssl_calculator_server.py  async_ssl_client.py  async_ssl_server.py  calculator-client.py  calculator-server.py  calculator_client.py  calculator_server.py  example.py  example_capability.capnp  example_capability.py  example_client.cpp  example_client.py  example_orphan.py  example_server.cpp  example_server.py  py_custom_message_builder.py  selfsigned.cert  selfsigned.key  test.capnp  test.capnp.c++  test.capnp.h  thread.capnp  thread_client.py  thread_server.py
profiles/: macos-x86_64  windows-x86
scripts/: capnp-json.py  capnp_test_pycapnp.py  release-pypi.sh
test/: addressbook with spaces.capnp  addressbook-with-dashes.capnp  addressbook.capnp  all-types.binary  all-types.capnp  all-types.packed  all-types.txt  all_types.capnp  annotations.capnp  bar.capnp  blob_test.capnp  foo.capnp  object.capnp  test_async_write_large_payload.py  test_blob_to_dict_base64.py  test_capability.capnp  test_capability.py  test_capability_context.py  test_capability_old.py  test_context_manager.py  test_examples.py  test_get_data_view.py  test_large_read.capnp  test_large_read.py  test_load.py  test_memory_handling.py  test_object.py  test_py_custom_message_builder.py  test_regression.py  test_response.capnp  test_response.py  test_rpc.py  test_rpc_calculator.py  test_schema.py  test_serialization.py  test_struct.py  test_structs_sequence.capnp  test_structs_sequence.py  test_threads.py
test/schemas/: child.capnp  parent.capnp
test/stubtest/: README.md  allowlist.txt  mypy.ini  test_runtime_surface.py
