[build-system]
requires = ["conan-py-build>=0.5.3", "cython>=3.0"]
build-backend = "conan_py_build.build"

[project]
name = "pycapnp"
version = "2.2.4"
description = "A cython wrapping of the C++ Cap'n Proto library"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-2-Clause"
license-files = ["LICENSE.md"]
authors = [
    {name = "Jacob Alexander", email = "haata@kiibohd.com"},
]
keywords = ["capnp", "capnproto", "Cap'n Proto", "pycapnp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
]
dependencies = [
    "jinja2",
]

[project.scripts]
capnpc-cython = "capnp._gen:main"

[dependency-groups]
dev = [
    "ruff",
    "tox",
    "pkgconfig",
    "cython>=3.0",
    "setuptools",
    {include-group = "test"},
    {include-group = "docs"},
]

test = [
    "pytest",
    "anyio",
    "pytest-asyncio",
    "pytest-tornasync",
    "pytest-trio",
    "pytest-twisted",
    "twisted",
]

docs = [
    "sphinx",
    "sphinx-multiversion",
]

[tool.conan-py-build]
extra-arguments = ["-o=capnproto/*:with_openssl=False", "-o=capnproto/*:with_zlib=False"]
extra-profile-build = "conan-build.profile"

[tool.conan-py-build.wheel]
packages = ["capnp"]
exclude = ["**/*.cpp"]

[tool.conan-py-build.sdist]
include = ["capnp", "CHANGELOG.md", "MANIFEST.in"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py37"
line-length = 120
exclude = ["benchmark", "build", "capnp/templates/module.pyx"]

[tool.ruff.lint]
ignore = [
    "E203", "E211", "E225", "E226", "E227", "E231", "E251",
    "E261", "E262", "E265", "E402",
]

[tool.ruff.lint.per-file-ignores]
"test/test_examples.py" = ["C901"]
"capnp/__init__.py" = ["F401", "F403", "F405"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
